# sklearn-extensions

./: .gitignore  README.md  pyproject.toml
src/hopfield/: hopfield_network.py
src/sklearn-extensions/hopfield/: boltzman_machine.py  hopfield_network.py
src/sklearn-extensions/preprocessing/: lagged_features.py  lead_time_target.py
src/sklearn-extensions/rbf_networks/: rbf_layer.py  rbf_model.py
src/sklearn_extensions/: __init__.py  model_zoo.py
src/sklearn_extensions/elm/: extreme_learning_machine.py
src/sklearn_extensions/hopfield/: __init__.py  boltzmann_machine.py  deep_belief_network.py  hopfield_network.py
src/sklearn_extensions/metrics/: __init__.py  directional_scores.py  soft_classification_scores.py
src/sklearn_extensions/mlp_torch/: __init__.py  mlp_torch_classifier.py  mlp_torch_model.py  mlp_torch_regressor.py
src/sklearn_extensions/models/: __init__.py
src/sklearn_extensions/models/elm/: __init__.py  extreme_learning_machine.py
src/sklearn_extensions/models/hopfield/: boltzmann_machine.py  deep_belief_network.py  hopfield_network.py
src/sklearn_extensions/models/mlp_torch/: __init__.py  mlp_torch_classifier.py  mlp_torch_model.py  mlp_torch_regressor.py
src/sklearn_extensions/models/pytorch/: __init__.py
src/sklearn_extensions/preprocessing/: __init__.py  lagged_features.py  lead_time_target.py
src/sklearn_extensions/rbf_networks/: __init__.py  rbf_layer.py  rbf_model.py
src/sklearn_extensions/wrappers/: __init__.py  multiplexed_regressor.py
src/wrappers/: multiplexed_regressor.py
test/: conftest.py  test_deep_belief_networks.py  test_elm.py  test_hopfield.py  test_imports.py  test_metrics.py  test_mlp_torch.py  test_preprocessing.py  test_rbf_networks.py  test_wrappers.py
(+20 files in other folders)
