[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn_extensions"
version = "0.0.1"
authors = [
  { name="Eugenio Lorente", email="eugenio.lorente@uah.es" },
]
description = "Mixed bag of models and preprocessing tools for sklearn and pytorch."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "torch",
    "torch_numopt"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]
